added link to semantle icons in html page

--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
     <head>
         <title>Random Semantle</title>
-        <style>body{background: #111}</style>
+        <link rel="icon" type="image/png" sizes="32x32" href="https://semantle.novalis.org/assets/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="https://semantle.novalis.org/assets/favicon-16x16.png">
+        <style>body{background: #111; color: #eee}</style>
         <script src="secretWords.js"></script>
         <script>
             "use strict";
@@ -15,6 +17,6 @@
         </script>
     </head>
     <body>
-
+        <noscript>You must enable JavaScript!</noscript>
     </body>
 </html>
